--- a/kirana/static/style.css
+++ b/kirana/static/style.css
@@ -18,6 +18,12 @@ footer{
   height:100%;
 } */
 /* footer{ position: static; bottom: 0; left: 0; right: 0;} */
+
+*{
+  box-sizing: border-box;
+  margin:0;
+  padding:0;
+}
 .img-item{
   height:100px;
   width:100px;
