--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -2,17 +2,28 @@
 
 {% block content %}
 
+    {% include 'partials/_alerts.html'%}
     <div class="container">
         {% if user.is_authenticated %}
             {% if user.is_staff%}
                 <p> Welcome {{user.username}}, you can choose the following option</p>
                 <a class= "btn btn-primary" href="{% url 'order_list'%}">Order List</a>
-                <a class= "btn btn-primary" href="{% url 'logout'%}">Logout</a>
+                <a class= "btn btn-primary" href="{% url 'delivery_listings'%}">Deliveries List</a>
+                <a class= "btn btn-primary" href="{% url 'user_listings'%}">Customer List</a>
+                <a class="btn btn-primary" href="javascript:{document.getElementById('logout').submit()}">Log Out <span class="sr-only">(current)</span></a>
+                <form action="{% url 'logout' %}" method="POST" id="logout">
+                  {% csrf_token %}
+                  <input type="hidden">
+                </form>
             {% else %}
                 <p> Welcome {{user.username}}, you can choose the following option</p>
-                <a class= "btn btn-primary" href="{% url 'cart'%}">Cart</a>
                 <a class= "btn btn-primary" href="{% url 'item'%}">Grocery List</a>
-                <a class= "btn btn-primary" href="{% url 'logout'%}">Logout</a>
+                <a class= "btn btn-primary" href="{% url 'cart'%}">Cart</a>
+                <a class="btn btn-primary" href="javascript:{document.getElementById('logout').submit()}">Log Out <span class="sr-only">(current)</span></a>
+                <form action="{% url 'logout' %}" method="POST" id="logout">
+                  {% csrf_token %}
+                  <input type="hidden">
+                </form>
             {% endif %}
         {% else %}
             <p>Welcome to kirana Store you can choose the following option</p>
