--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -7,13 +7,95 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav mr-auto">
+        <!-- Left hand side list of nav elements -->
+        <ul class="navbar-nav">
           {% if user.is_authenticated %}
             {% if user.is_staff %}
-              <li class="nav-item active">
+              <li 
+                {% if 'order_list' in request.path %}
+                  class="nav-item active"
+                {% else %}
+                  class="nav-item"
+                {% endif %}
+              >
                 <a class="nav-link" href="{% url 'order_list'%}">Order List <span class="sr-only">(current)</span></a>
               </li>
-              <li class="nav-item active">
+              <li 
+                {% if 'display_listings' in request.path %}
+                  class="nav-item active"
+                {% elif 'display_listing' in request.path %}
+                class="nav-item active"
+                {% else %}
+                  class="nav-item"
+                {% endif %}
+              >
+                <a class="nav-link" href="{% url 'delivery_listings'%}">Delivery List <span class="sr-only">(current)</span></a>
+              </li>
+              <li 
+                {% if 'user_listings' in request.path %}
+                  class="nav-item active"
+                {% else %}
+                  class="nav-item"
+                {% endif %}
+              >
+                <a class="nav-link" href="{% url 'user_listings'%}">User List <span class="sr-only">(current)</span></a>
+              </li>
+            {%else%}
+              <li 
+                {% if 'item' in request.path %}
+                  class="nav-item active"
+                {% else %}
+                  class="nav-item"
+                {% endif %}
+              >
+                <a class="nav-link" href="{% url 'item'%}">Grocery List <span class="sr-only">(current)</span></a>
+              </li>
+              <li 
+                {% if 'cart' in request.path%}
+                  class="nav-item active"
+                {% else %}
+                  class="nav-item"
+                {% endif %}
+              >
+                <a class="nav-link" href="{% url 'cart'%}">Cart <span class="sr-only">(current)</span></a>
+              </li>
+            {%endif%}
+          {% else %}
+            <li 
+              {% if 'register' in request.path %}
+                class="nav-item active"
+              {% else %}
+                class="nav-item"
+              {% endif %}
+            >
+              <a class="nav-link" href="{% url 'register'%}">Register <span class="sr-only">(current)</span></a>
+            </li>
+            <li 
+              {% if 'item' in request.path %}
+                class="nav-item active"
+              {% else %}
+                class="nav-item"
+              {% endif %}
+            >
+              <a class="nav-link" href="{% url 'item'%}">Grocery List <span class="sr-only">(current)</span></a>
+            </li>
+          {% endif %}
+        </ul>
+
+        <!-- Right hand side list of elements  -->
+        <ul class="navbar-nav ml-auto">
+          {% if user.is_authenticated %}
+            {% if user.is_staff %}
+              <li 
+                {% if '/' == request.path%}
+                  class="nav-item active"
+                {% else %}
+                  class="nav-item"
+                {% endif %}
+              >
+                <a class="nav-link" href="{%url 'index'%}">  Welcome {{user.username}}(Home)</a>
+              </li>
+              <li>
                 <a class="nav-link" href="javascript:{document.getElementById('logout').submit()}">Log Out <span class="sr-only">(current)</span></a>
                 <form action="{% url 'logout' %}" method="POST" id="logout">
                   {% csrf_token %}
@@ -21,14 +103,17 @@
                 </form>
               </li>
             {%else%}
-              <li class="nav-item active">
-                <a class="nav-link" href="{% url 'item'%}">Grocery List <span class="sr-only">(current)</span></a>
+              <li 
+                {% if '/' == request.path%}
+                  class="nav-item active"
+                {% else %}
+                  class="nav-item"
+                {% endif %}
+              >
+                <a  class="nav-link" href="{%url 'index'%}">  Welcome {{user.username}} (Home)</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="{% url 'cart'%}">Cart <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="javascript:{document.getElementById('logout').submit()}">Log Out <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="javascript:{document.getElementById('logout').submit()}">Log Out <span class="sr-only"></span></a>
                 <form action="{% url 'logout' %}" method="POST" id="logout">
                   {% csrf_token %}
                   <input type="hidden">
@@ -37,13 +122,7 @@
             {%endif%}
           {% else %}
             <li class="nav-item active">
-              <a class="nav-link" href="{% url 'register'%}">Register <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
               <a class="nav-link" href="{%url 'login'%}">Login <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="{% url 'item'%}">Grocery List <span class="sr-only">(current)</span></a>
             </li>
           {% endif %}
         </ul>
