Added requirement.txt, changed the styling of the fulfill button
Added the requirements.txt file, changed the styling of the fulfilled button in display_list

--- a/templates/retailer/delivery_list.html
+++ b/templates/retailer/delivery_list.html
@@ -39,7 +39,7 @@
               <form action="{%url 'fulfilled' item.id%}" method ="POST"> 
                 {%csrf_token%}
                 <input type="hidden" name="cust_id" value="{{item.id}}">
-                <button type ="submit" name="submit" value="submit">Fulfilled</button>
+                <button type ="submit" class="btn btn-primary" name="submit" value="submit">Fulfilled</button>
               </form>
             </td>
           </tr>
